Bug fixes & additional ux enhancement -Header/main updated to LMNOP -Ran collectstatic. CSS should work correctly. If not, run it again -Artist detail page would have the show list and clicking the show will redirect to the notes page for the show -<hr> added in between each notes in the user profile page for better readability

--- a/lmn/static/css/base_style.css
+++ b/lmn/static/css/base_style.css
@@ -170,10 +170,7 @@ div #left-header {
 }
 
 div #right-header {
-  float: right;
   text-align: right;
-}
+  overflow: hidden;
 
-div #clear {
-  clear: both;
 }
